Structure almost finished

--- a/FaceGular/src/app/colegas/colegas.component.html
+++ b/FaceGular/src/app/colegas/colegas.component.html
@@ -1,1 +1,5 @@
-<p>colegas works!</p>
+<app-menu></app-menu>
+<!-- AQUI BUSCADOR-->
+<app-mis-coleguillas></app-mis-coleguillas>
+<app-info-si-coleguilla></app-info-si-coleguilla>
+<app-footer></app-footer>
