--- a/FaceGular/src/app/historietas/historietas.component.html
+++ b/FaceGular/src/app/historietas/historietas.component.html
@@ -1,1 +1,4 @@
-<p>historietas works!</p>
+<app-menu></app-menu>
+<app-decir-algo></app-decir-algo>
+<app-mis-historietas></app-mis-historietas>
+<app-footer></app-footer>
