--- a/FaceGular/src/app/decir-algo/decir-algo.component.html
+++ b/FaceGular/src/app/decir-algo/decir-algo.component.html
@@ -4,6 +4,6 @@
         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Expresa como te sientes con total libertad"></textarea>
     </div>
     <div class="text-right">
-        <button type="submit" class="btn btn-primary">Publicar Historieta</button>
+        <button (click)="addMessage(messageInsert)" class="btn btn-primary">Publicar Historieta</button>
     </div>
 </form>
