Pre User Friends

--- a/FaceGular/src/app/cosas/cosas.component.html
+++ b/FaceGular/src/app/cosas/cosas.component.html
@@ -1,7 +1,7 @@
 <app-menu></app-menu>
 <app-datos-personales></app-datos-personales>
 <div class="row">
-    <app-mis-historietas class="col-8"></app-mis-historietas>
+    <app-mis-historietas [messages]="messages" class="col-8"></app-mis-historietas>
     <app-mis-coleguillas class="col-4"></app-mis-coleguillas>
 </div>
 <app-footer></app-footer>
