--- a/FaceGular/src/app/decir-algo/decir-algo.component.html
+++ b/FaceGular/src/app/decir-algo/decir-algo.component.html
@@ -1,9 +1,9 @@
 <form>
     <div class="form-group">
-        <label for="exampleFormControlTextarea1"><strong>Di algo</strong></label>
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Expresa como te sientes con total libertad"></textarea>
+        <label for="content"><strong>Di algo</strong></label>
+        <textarea class="form-control" id="content" name="content" rows="3" placeholder="Expresa como te sientes con total libertad" [(ngModel)]="messageToInsert" minLength="1" required></textarea>
     </div>
     <div class="text-right">
-        <button (click)="addMessage(messageInsert)" class="btn btn-primary">Publicar Historieta</button>
+        <button (click)="addMessage()" class="btn btn-primary">Publicar Historieta</button>
     </div>
 </form>
