--- a/FaceGular/src/app/decir-algo/decir-algo.component.html
+++ b/FaceGular/src/app/decir-algo/decir-algo.component.html
@@ -1,7 +1,7 @@
 <form>
     <div class="form-group">
         <label for="content"><strong>Di algo</strong></label>
-        <textarea class="form-control" id="content" name="content" rows="3" placeholder="Expresa como te sientes con total libertad" [(ngModel)]="messageToInsert" minLength="1" required></textarea>
+        <textarea class="form-control" id="content" name="content" rows="3" placeholder="Expresa como te sientes con total libertad" [(ngModel)]="messageToInsert"></textarea>
     </div>
     <div class="text-right">
         <button (click)="addMessage()" class="btn btn-primary">Publicar Historieta</button>
