--- a/FaceGular/src/app/message/message.component.html
+++ b/FaceGular/src/app/message/message.component.html
@@ -1,12 +1,12 @@
 <ng-container *ngIf="message?.usersId">
-    <div class="card mb-3">
+    <div class="card mb-3 p-3">
         <div class="row no-gutters">
             <div class="col-md-1">
                 <img src="assets/msg.png" class="card-img" alt="Mensaje icono">
             </div>
-            <div class="col-md-10">
+            <div class="col-md-11">
                 <div class="card-body">
-                    <h5 class="card-title">AQUI VA EL NOMBRE DEL ID {{message.usersId}}</h5>
+                    <h5 class="card-title">PUBLICADOR ID {{message.usersId}}</h5>
                     <p class="card-text">{{message.content}}</p>
                     <p class="card-text"><small class="text-muted">{{message.publishDate | date}}</small></p>
                 </div>
