--- a/FaceGular/src/app/message/message.component.html
+++ b/FaceGular/src/app/message/message.component.html
@@ -9,6 +9,11 @@
                     <h5 class="card-title">PUBLICADOR ID {{message.usersId}}</h5>
                     <p class="card-text">{{message.content}}</p>
                     <p class="card-text"><small class="text-muted">{{message.publishDate | date}}</small></p>
+                    <p class="text-right">
+                        <button type="button" class="btn btn-success"><i class="fa fa-2x fa-hand-peace-o" aria-hidden="true"></i></button>
+                        <button type="button" class="btn btn-warning"><i class="fa fa-2x fa-hand-rock-o" aria-hidden="true"></i></button>
+                        <button type="button" class="btn btn-danger"><i class="fa fa-2x fa-thumbs-o-down" aria-hidden="true"></i></button>
+                    </p>
                 </div>
             </div>
         </div>
