--- a/FaceGular/src/app/friend-card/friend-card.component.html
+++ b/FaceGular/src/app/friend-card/friend-card.component.html
@@ -6,8 +6,11 @@
             </div>
             <div class="col-md-11">
                 <div class="card-body">
+                    <div class="text-right">
+                        <button (click)="deleteReqFriend(friend.id)" type="button" class="btn btn-danger"><i class="fa fa-times" aria-hidden="true"></i></button>
+                    </div>
                     <h5 class="card-title">ID DE AMIGO {{friend.toUsersId}}</h5>
-                    <p class="card-text">ES AMIGO DE {{friend.fromUsersId}}</p>
+                    <p class="card-text">AMISTAD CON {{friend.fromUsersId}}</p>
                     <p class="card-text"><small class="text-muted">{{friend.state}}</small></p>
                 </div>
             </div>
