--- a/FaceGular/src/app/user-edit/user-edit.component.html
+++ b/FaceGular/src/app/user-edit/user-edit.component.html
@@ -1,29 +1,31 @@
+<app-menu></app-menu>
 <ng-container *ngIf="editingUser?.id">
-    <form class="pt-5">
+    <form class="pt-5" (ngSubmit)="upgradeUser()">
         <div class="form-group">
             <label for="namef">Nombre:</label>
-            <input type="text" class="form-control" id="namef" [(ngModel)]="editingUser.name">
+            <input type="text" class="form-control" id="namef" name="namef" [(ngModel)]="editingUser.name">
         </div>
         <div class="form-group">
-            <label for="surnamef">Apellido:</label>
-            <input type="text" class="form-control" id="surnamef" [(ngModel)]="editingUser.surname">
+            <label for="surnamef">Apellido/s:</label>
+            <input type="text" class="form-control" id="surnamef" name="surnamef" [(ngModel)]="editingUser.surname">
         </div>
         <div class="form-group">
             <label for="birthDatef">Fecha de nacimiento:</label>
-            <input type="text" class="form-control" id="birthDatef" [(ngModel)]="editingUser.birthDate">
+            <input type="text" class="form-control" id="birthDatef" name="birthDatef" [(ngModel)]="editingUser.birthDate" readonly>
         </div>
         <div class="form-group">
             <label for="startDatef">Fecha de registro:</label>
-            <input type="text" class="form-control" id="startDatef" [(ngModel)]="editingUser.startDate" readonly>
+            <input type="text" class="form-control" id="startDatef" name="startDatef" [(ngModel)]="editingUser.startDate" readonly>
         </div>
         <div class="form-group">
             <label for="userf">Nombre de usuario:</label>
-            <input type="text" class="form-control" id="userf" [(ngModel)]="editingUser.user">
+            <input type="text" class="form-control" id="userf" name="userf" [(ngModel)]="editingUser.user">
         </div>
         <div class="form-group">
             <label for="passf">Password:</label>
-            <input type="text" class="form-control" id="passf" [(ngModel)]="editingUser.pass" readonly>
+            <input type="text" class="form-control" id="passf" name="passf" [(ngModel)]="editingUser.pass" readonly>
         </div>
-        <button (click)="upgradeUser()" class="btn btn-primary">Submit</button>
+        <button class="btn btn-primary">Submit</button>
     </form>
 </ng-container>
+<app-footer></app-footer>
