Seguimos con buscador

--- a/FaceGular/src/app/colegas/colegas.component.html
+++ b/FaceGular/src/app/colegas/colegas.component.html
@@ -1,5 +1,7 @@
 <app-menu></app-menu>
-<!-- AQUI BUSCADOR-->
-<app-mis-coleguillas></app-mis-coleguillas>
-<app-info-si-coleguilla></app-info-si-coleguilla>
+<app-buscador-amigos></app-buscador-amigos>
+<div class="row">
+    <app-all-users [usuarios]="usuarios" class="col-12"></app-all-users>
+    <app-info-si-coleguilla></app-info-si-coleguilla>
+</div>
 <app-footer></app-footer>
