--- a/FaceGular/src/app/all-users/all-users.component.html
+++ b/FaceGular/src/app/all-users/all-users.component.html
@@ -1,7 +1,7 @@
 <div>
     <p class="pt-5"><strong>Usuarios</strong></p>
     <div class="overflow-auto" style="max-height: 300px;">
-        <div *ngFor="let usuario of usuarios">
+        <div *ngFor="let usuario of usuarios" [hidden]="(!usuario.user.includes(nameSearch))">
             <app-user-card [usuario]="usuario"></app-user-card>
         </div>
     </div>
