--- a/FaceGular/src/app/user-edit/user-edit.component.html
+++ b/FaceGular/src/app/user-edit/user-edit.component.html
@@ -25,7 +25,7 @@
             <label for="passf">Password:</label>
             <input type="text" class="form-control" id="passf" name="passf" [(ngModel)]="editingUser.pass" readonly>
         </div>
-        <button class="btn btn-primary">Submit</button>
+        <button class="btn btn-primary">Guardar cambios</button>
     </form>
 </ng-container>
 <app-footer></app-footer>
