--- a/FaceGular/src/app/user-card/user-card.component.html
+++ b/FaceGular/src/app/user-card/user-card.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="usuario?.id">
-    <div class="card mb-3 p-3">
+    <div class="card mb-3 p-3" (click)="showId(usuario.id)">
         <div class="row no-gutters">
             <div class="col-md-1">
                 <img src="assets/friends.png" class="card-img" alt="Mensaje icono">
